Run tests only when code, tests or workflow changes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,18 @@ name: Tests
 
 on:
   push:
+    paths: 
+      - 'clairvoyance/**'
+      - 'tests/**'
+      - '.github/workflows/*'
     branches:
       - main
       - master
   pull_request:
+    paths:
+      - 'clairvoyance/**'
+      - 'tests/**'
+      - '.github/workflows/*'
     branches:
       - main
       - master
