--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,8 +69,9 @@ jobs:
         node-version: '16'
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install poetry
+        poetry config virtualenvs.in-project true
+        poetry install
     - name: Install deps and run server
       run: |
         cd tests/apollo-server
