--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Run tests
       run: |
         source .venv/bin/activate
-        pytest --cov=$MODULE_NAME --cov-report=xml --cov-fail-under=$MIN_TEST_COV tests/unit
+        pytest --cov=$MODULE_NAME --cov-report=xml --cov-fail-under=$MIN_TEST_COV tests
 
   system-tests:
 
@@ -62,16 +62,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        pip install poetry
+    - name: Setup poetry
+      run: |
+        poetry config virtualenvs.in-project true
+        poetry install
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Install Python dependencies
-      run: |
-        pip install poetry
-        poetry config virtualenvs.in-project true
-        poetry install
     - name: Install deps and run server
       run: |
         cd tests/apollo-server
@@ -91,4 +91,5 @@ jobs:
         done
     - name: Test with pytest
       run: |
+        source .venv/bin/activate
         python -m unittest tests/system.py
