--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,10 +9,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - uses: actions/checkout@v2
+      - uses: softprops/action-gh-release@v1
 
   pypi-push:
     runs-on: ubuntu-latest
@@ -40,9 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
