--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ on:
       - '.gitignore'
     branches:
       - main
-      - master
   pull_request:
     paths-ignore:
       - 'README.md'
@@ -16,7 +15,14 @@ on:
       - '.gitignore'
     branches:
       - main
-      - master
+    types: 
+      - opened
+      - reopened
+
+env:
+  MODULE_NAME: clairvoyance
+  MIN_TEST_COV: 0
+  SERVER: http://localhost:4000
 
 jobs:
   unit-tests:
@@ -27,15 +33,27 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+        pip install poetry
+    - name: Setup poetry
       run: |
-        python -m unittest tests/*_test.py
+        poetry config virtualenvs.in-project true
+        poetry install
+    - name: Run lint
+      if: always()
+      run: |
+        source .venv/bin/activate
+        isort -m 9 --line-length 160 $MODULE_NAME tests --check-only
+        pylint --load-plugins pylint_quotes $MODULE_NAME tests
+        docformatter --wrap-summaries 160 --wrap-descriptions 160 -cr $MODULE_NAME tests
+        yapf -rd $MODULE_NAME tests
+        mypy -V
+        mypy $MODULE_NAME tests
+    - name: Run tests
+      run: |
+        source .venv/bin/activate
+        pytest --cov=$MODULE_NAME --cov-report=xml --cov-fail-under=$MIN_TEST_COV tests
 
   system-tests:
 
@@ -45,15 +63,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        pip install poetry
+    - name: Setup poetry
+      run: |
+        poetry config virtualenvs.in-project true
+        poetry install
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install deps and run server
       run: |
         cd tests/apollo-server
@@ -61,16 +80,19 @@ jobs:
         node src/index.js &
     - name: Wait for server
       run: |
-        echo "SERVER=http://localhost:4000" > $GITHUB_ENV
-
-        for i in {0..9}; do
+        for i in {0..10}; do
           echo "Sleep for 1 second ..."
           sleep 1
           if curl -s -o /dev/null "$SERVER"; then
             echo "$SERVER returned HTTP response!"
             break
           fi
+          if [ $i -eq 10 ]; then
+            echo "Server did not respond after 10 seconds!"
+            exit 1
+          fi
         done
     - name: Test with pytest
       run: |
+        source .venv/bin/activate
         python -m unittest tests/system.py
