--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,11 +37,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -54,7 +58,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clairvoyance:latest
-          platform: linux/amd64, linux/arm64
+          platform: linux/amd64,linux/arm64
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
