fix: Unexpected input(s) 'platform' ...

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,7 +58,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clairvoyance:latest
-          platform: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
