feat: ignore aiohttp warns
Signed-off-by: QuentinN42 <quentin@lieumont.fr>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ omit = [
     'docs/*',
 ]
 
+[tool.pytest.ini_options]
+filterwarnings = [ "ignore:::aiounittest" ]
+
 [tool.poetry.dependencies]
 python = ">=3.7,<=3.11"
 asyncio = "^3.4.3"
