Lot of fixes, improvements etc... (#66)
* feat: fork for pypi

* fix: handle json decode errors

* fix: error not defined

* feat: jmiroosh feature

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: duplicate query regex

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* fix: dockerhub token

* feat: proxy

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: ignore error

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: add max retry param

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* fix: input object heuristics

* fix: typing context

* fix: input object for argmuments

* fix: double regex

* fix: new field regex

* fix: did you mean

* fix: did you mean

* fix: tests

* fix: tests

* fix: typename regex

* feat: skip regex

* feat: fix regex

* fix: was not provided regex

* feat: dot in field

* feat: add backoff

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: multiple did you mean

* fix: better regexps

* feat: move to triple quotes

* feat: move to triple quotes

* feat: move to triple quotes

* feat: move to triple quotes

* feat: profiles

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: field regexes above

* feat: triple quote

* feat: compile arg regexes

* feat: compile typeref regexes

* --wip-- [skip ci]

* --wip-- [skip ci]

* fix: final regexes

* fix: remove print

* docs: add help message to the doc

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: V2.3

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: @jamboro fixes issue 11

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: retro compat

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: update python

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: lookup in stderr

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* feat: ignore aiohttp warns

Signed-off-by: QuentinN42 <quentin@lieumont.fr>

* c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,13 +11,42 @@
             "cwd": "${workspaceFolder}",
             "module": "clairvoyance",
             "args": [
-                "-o", "/tmp/t.json",
-                "-w", "tests/data/wordlist-for-apollo-server.txt",
-                "http://localhost:4000", "--verbose"
+                "-o",
+                "/tmp/t.json",
+                "-w",
+                "tests/data/wordlist-for-apollo-server.txt",
+                "http://localhost:4000",
+                "--verbose"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "Clairvoyance on localhost:4000",
+            "type": "python",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "module": "clairvoyance",
+            "args": [
+                "-o",
+                "target/t.json",
+                "http://localhost:4000",
+                "--verbose"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "Clairvoyance on rick and morty GQL application",
+            "type": "python",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "module": "clairvoyance",
+            "args": [
+                "https://rickandmortyapi.com/graphql"
             ],
             "console": "integratedTerminal",
             "justMyCode": true
         }
-
     ]
 }
