--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ python = ">=3.8,<4.0"
 asyncio = "^3.4.3"
 aiohttp = {extras = ["speedups"], version = "^3.8.1"}
 rich = "^13.3.1"
+requests = "^2.31.0"
+types-requests = "^2.31.0.7"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
