--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
+env:
+  PYTHON_VERSION: "3.10"
+
 permissions:
   contents: read
 
@@ -16,8 +19,9 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
-      - name: "Version Release"
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Version release on Github
         uses: softprops/action-gh-release@v2
         with:
           make_latest: "true"
@@ -28,6 +32,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: "poetry"
 
       - name: Install dependencies
         run: pip install poetry
