Replace yapf with black in dependencies
Remove plugins
Update poetry.lock

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,8 +116,8 @@ jobs:
         run: |
           source .venv/bin/activate
           isort -m 9 --line-length 160 $MODULE_NAME tests --check-only
-          pylint --load-plugins pylint_quotes $MODULE_NAME tests
+          pylint $MODULE_NAME tests
           docformatter --wrap-summaries 160 --wrap-descriptions 160 -cr $MODULE_NAME tests
-          yapf -rd $MODULE_NAME tests
+          black --check $MODULE_NAME tests
           mypy -V
           mypy $MODULE_NAME tests
