--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,13 +45,12 @@ rich = "^13.3.1"
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
 aiounittest = "^1.4.2"
+black = "^24.4"
 docformatter = "^1.4"
 isort = "^5.10.1"
 mypy = "^0.950"
 poetryup = "^0.3.15"
 pylint = "^2.13.9"
-pylint-absolute-imports = "1.0.1"
-pylint-quotes = "^0.2.3"
 pytest = "^6.2.5"
 pytest-cov = "^2.12.1"
 pytest-mock = "^3.8.2"
@@ -59,7 +58,6 @@ setuptools = "^45"
 unify = "^0.5"
 vulture = "^2.5"
 yamllint = "^1.27.1"
-yapf = "^0.31.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
